fix logo resize on mobile

--- a/source/assets/stylesheets/components/nav.sass
+++ b/source/assets/stylesheets/components/nav.sass
@@ -4,8 +4,7 @@
   opacity: 1.0
   -webkit-transition: width .4s, height .4s, -webkit-transform .4s
   transition: height .4s, transform .4s, opacity .5s
-  height: 50px
-  @media screen and (max-width: map-get($breakpoints, 768px))
+  @media screen and (max-width: map-get($breakpoints, md))
     height: 35px
 
 .home-link
